--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,22 @@
 {
-  "version": "0.2.0",
-  "configurations": [
+  "version": "2.0.0",
+  "tasks": [
     {
-      "name": "C/C++ Runner: Debug Session",
-      "type": "cppdbg",
-      "request": "launch",
-      "args": [],
-      "stopAtEntry": false,
-      "externalConsole": true,
-      "cwd": "c:/Users/paulo/OneDrive/Área de Trabalho/Programas em C",
-      "program": "c:/Users/paulo/OneDrive/Área de Trabalho/Programas em C/build/Debug/outDebug",
-      "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ]
+      "label": "Compilar C 64 bits",
+      "type": "shell",
+      "command": "C:/msys64/mingw64/bin/gcc.exe",
+      "args": [
+        "-g",
+        "${file}",
+        "-o",
+        "${fileDirname}/${fileBasenameNoExtension}.exe"
+      ],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": ["$gcc"],
+      "detail": "Compila o programa usando gcc 64 bits"
     }
   ]
 }
